--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^4.1.0",
     "next": "10.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^6.0.0"
+    "react-markdown": "^6.0.0",
+    "react-syntax-highlighter": "^15.4.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
